--- a/mysite/myapp/templates/myapp/users.html
+++ b/mysite/myapp/templates/myapp/users.html
@@ -9,7 +9,7 @@
         <option value="personID">personID</option>
         <option value="Uuid">Uuid</option>
       </select>
-      <button type="submit" id="button">
+      <button type="submit" id="search-button">
         Submit
         <i class="fa fa-search"></i>
       </button>
