--- a/mysite/myapp/templates/myapp/login.html
+++ b/mysite/myapp/templates/myapp/login.html
@@ -1,7 +1,9 @@
-{% extends 'myapp/main.html' %} {% block content %}
-  <div class="login-container">
-    <h2>Login</h2>
-    <form action="{% url 'login' %}" method="post">
+{% block content %}
+  {% load static %}
+  <button id="login-auth-button">Login</button>
+  <div id="login-pop-up-form">
+    <h1>Login</h1>
+    <form id="login-form" action="{% url 'login' %}" method="post">
       {% csrf_token %}
       <div class="form-group">
         <label for="username">Username:</label>
@@ -13,6 +15,7 @@
       </div>
       <button id="auth-submit" type="submit">Login</button>
     </form>
+    <div id="error-message"></div>
     {% for message in messages %}
       <p class="text-center">{{ message }}</p>
     {% endfor %}
@@ -21,4 +24,6 @@
       <a href="{% url 'register' %}">Sign up</a>
     </h1>
   </div>
+
+  <script src="{% static 'js/login.js' %}"></script>
 {% endblock %}
