--- a/mysite/myapp/templates/myapp/navbar.html
+++ b/mysite/myapp/templates/myapp/navbar.html
@@ -17,20 +17,20 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'controls' %}">Controls</a>
         </li>
-        {% comment %}
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
-        {% endcomment %}
       </ul>
     </div>
   </div>
-  <div id="logout-container">
+  <div id="authentication-container">
     <span>
       {% if user.is_authenticated %}
         <div class="logout-container">
           <span>Welcome, {{ request.user }}</span>
           <a href="{% url 'logout' %}">Logout</a>
+        </div>
+      {% else %}
+        <div class="register-container">
+          <a href="{% url 'register' %}">Register</a>
+          {% include 'myapp/login.html' %}
         </div>
       {% endif %}
     </span>
