--- a/mysite/myapp/templates/myapp/statistics.html
+++ b/mysite/myapp/templates/myapp/statistics.html
@@ -1,4 +1,6 @@
-{% extends 'myapp/main.html' %} {% block content %}
+{% extends 'myapp/main.html' %} {% block title %}
+  <title>Statistics</title>
+{% endblock %} {% block content %}
   <div class="row">
     <div class="col">
       <div class="col-md">
