--- a/mysite/myapp/templates/myapp/controls.html
+++ b/mysite/myapp/templates/myapp/controls.html
@@ -1,5 +1,8 @@
 {% extends 'myapp/main.html' %}
 {% load static %}
+{% block title %}
+  <title>Controls</title>
+{% endblock %}
 {% block content %}
   <br />
 
@@ -8,7 +11,7 @@
       <div class="col-md">
         <div class="card text-center text-white mb-3" id="total-orders">
           <div class="card-header">
-            <h5 class="card-title">Total Orders</h5>
+            <h5 class="card-title">Add a user</h5>
           </div>
           <div class="card-body">
             <h3 class="card-title"></h3>
