--- a/mysite/myapp/templates/myapp/main.html
+++ b/mysite/myapp/templates/myapp/main.html
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %} ?{% now 'U' %}" />
-    <title>Document</title>
+    <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}" />
+    {% block title %}
+      <title>My first site</title>
+    {% endblock %}
   </head>
 
   <body>
