--- a/mysite/myapp/templates/myapp/register.html
+++ b/mysite/myapp/templates/myapp/register.html
@@ -1,15 +1,99 @@
 {% extends 'myapp/main.html' %}
+{% block title %}
+  <title>Register</title>
+{% endblock %}
 {% block content %}
-  <div id="register-pop-up-form">
-    <h1>Register new user</h1>
+  <div id="register-container">
+    <div id="register-header">
+      <h1>Register new user</h1>
+    </div>
+
     <form id="register-form" action="" method="POST">
       {% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit" class="user-submit">Register</button>
+      <table id="register-table">
+        <tbody>
+          <tr>
+            <td>
+              <label for="id_username">Username:</label>
+            </td>
+            <td>
+              <input type="text" name="username" value="" required />
+            </td>
+            <td>
+              <p class="helptext">{{ form.username.help_text }}</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <label for="id_first_name">First Name:</label>
+            </td>
+            <td>
+              <input type="text" name="first_name" value="" />
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>
+              <label for="id_last_name">Last Name:</label>
+            </td>
+            <td>
+              <input type="text" name="last_name" value="" />
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>
+              <label for="id_email">Email:</label>
+            </td>
+            <td>
+              <input type="email" name="email" value="" required />
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>
+              <label for="id_password1">Password:</label>
+            </td>
+            <td>
+              <input type="password" name="password1" />
+            </td>
+            <td class="pw-help">
+              <p class="helptext">{{ form.password1.help_text }}</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <label for="id_password2">Confirm Password:</label>
+            </td>
+            <td>
+              <input type="password" name="password2" />
+            </td>
+
+            <td>
+              <p class="helptext">{{ form.password2.help_text }}</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+      <div id="register-footer">
+        <div class="errorlist">
+          {% if form.username.errors or form.password1.errors or form.password2.errors %}
+            <ul>
+              {% for error in form.username.errors %}
+                <li>{{ error }}</li>
+              {% endfor %}
+              {% for error in form.password1.errors %}
+                <li>{{ error }}</li>
+              {% endfor %}
+              {% for error in form.password2.errors %}
+                <li>{{ error }}</li>
+              {% endfor %}
+            </ul>
+          {% endif %}
+        </div>
+        <button id="register-button" type="submit">Register</button>
+      </div>
     </form>
-    {% for message in messages %}
-      <p class="text-center">{{ message }}</p>
-    {% endfor %}
   </div>
 {% endblock %}
-
