--- a/mysite/myapp/templates/myapp/users.html
+++ b/mysite/myapp/templates/myapp/users.html
@@ -1,4 +1,8 @@
-{% extends 'myapp/main.html' %} {% block content %}
+{% extends 'myapp/main.html' %}
+{% block title %}
+  <title>Users</title>
+{% endblock %}
+{% block content %}
   <div class="search">
     <form class="example" action="{% url 'users_search' %}" method="GET">
       <input type="text" placeholder="Search.." name="query" />
@@ -15,7 +19,6 @@
       </button>
     </form>
   </div>
-
 
   <div class="users-table">
     <table>
