--- a/mysite/myapp/templates/myapp/account.html
+++ b/mysite/myapp/templates/myapp/account.html
@@ -1,108 +1,77 @@
-{% extends 'myapp/main.html' %}
-{% block title %}
-  <title>{{ karel.first_name }} {{ user.last_name }}</title>
-{% endblock %}
-{% block content %}
-  <div id="register-container">
-    <div id="register-header">
-      <h1>Change user information</h1>
-    </div>
-    {% comment %} <form method="post">
-      {% csrf_token %}
-      {{ form }}
-      <button type="submit">Update</button>
-    </form> {% endcomment %}
+{% extends 'myapp/user_profile.html' %}
 
-    <form id="register-form" action="" method="POST" enctype="multipart/form-data">
-      {% csrf_token %}
+{% block userinfo %}
+  <form id="register-form" action="" method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
 
-      <table id="register-table">
-        <tbody>
-          <tr>
-            <td>
-              <label for="id_username">Username:</label>
-            </td>
-            <td>
-              <input type="text" name="username" value="{{ user.username }}" />
-            </td>
-            <td>
-              <p class="helptext">{{ form.username.help_text }}</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <label for="id_first_name">First Name:</label>
-            </td>
-            <td>
-              <input type="text" name="first_name" value="" />
-            </td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>
-              <label for="id_last_name">Last Name:</label>
-            </td>
-            <td>
-              <input type="text" name="last_name" value="" />
-            </td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>
-              <label for="id_email">Email:</label>
-            </td>
-            <td>
-              <input type="email" name="email" value="" />
-            </td>
-            <td></td>
-          </tr>
-          {% comment %} <tr>
-            <td>
-              <label for="id_password1">Password:</label>
-            </td>
-            <td>
-              <input type="password" name="password1" />
-            </td>
-            <td class="pw-help">
-              <p class="helptext">{{ form.password1.help_text }}</p>
-            </td>
-          </tr> {% endcomment %}
-          {% comment %} <tr>
-            <td>
-              <label for="id_password2">Confirm Password:</label>
-            </td>
-            <td>
-              <input type="password" name="password2" />
-            </td>
+    <table id="register-table">
+      <tbody>
+        <tr>
+          <td>
+            <label for="id_username">Username:</label>
+          </td>
+          <td>
+            <input type="text" name="username" value="{{ user.username }}" />
+          </td>
+          <td>
+            <p class="helptext">{{ u_form.username.help_text }}</p>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <label for="id_first_name">First Name:</label>
+          </td>
+          <td>
+            <input type="text" name="first_name" value="" />
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>
+            <label for="id_last_name">Last Name:</label>
+          </td>
+          <td>
+            <input type="text" name="last_name" value="" />
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>
+            <label for="id_email">Email:</label>
+          </td>
+          <td>
+            <input type="email" name="email" value="" />
+          </td>
+          <td>
+            <img src="{{ user.profile.image.url }}" />
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
-            <td>
-              <p class="helptext">{{ form.password2.help_text }}</p>
-            </td>
-          </tr> {% endcomment %}
-        </tbody>
-      </table>
-
-      <div id="register-footer">
-        <div class="errorlist">
-          {% if form.username.errors or form.password1.errors or form.password2.errors %}
-            <ul>
-              {% for error in form.username.errors %}
-                <li>{{ error }}</li>
-              {% endfor %}
-              {% for error in form.password1.errors %}
-                <li>{{ error }}</li>
-              {% endfor %}
-            </ul>
-          {% endif %}
-        </div>
-        <a id="register-button" href="{% url 'password' %}">Change password</a>
-        <div>
-          <label for="id_password1">Confirm password:</label>
-          <input type="password" name="password1" />
-        </div>
-
-        <button id="register-button" type="submit">Submit</button>
+    <div id="register-footer">
+      <div class="errorlist">
+        {% if u_form.username.errors or u_form.password1.errors or u_form.password2.errors %}
+          <ul>
+            {% for error in u_form.username.errors %}
+              <li>{{ error }}</li>
+            {% endfor %}
+            {% for error in u_form.password1.errors %}
+              <li>{{ error }}</li>
+            {% endfor %}
+          </ul>
+        {% endif %}
       </div>
-    </form>
-  </div>
+      {{ p_form.as_table }}
+      <div>
+        <label for="id_password1">Confirm password:</label>
+        <input type="password" name="password1" />
+      </div>
+
+      <button id="profile-btn" type="submit">Submit</button>
+      <div id="change-pass-link">
+        <a id="profile-btn" href="{% url 'password' %}">Change password</a>
+      </div>
+    </div>
+  </form>
 {% endblock %}
